# snarkVM

./: Cargo.toml
.circleci/: config.yml
algorithms/src/snark/groth16/: generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs
dpc/: Cargo.toml
dpc/src/base_dpc/: mod.rs
models/src/gadgets/utilities/: optional_vec.rs
parameters/: Cargo.toml
snarkos-integration/: Cargo.toml
snarkos_integration/: Cargo.toml
snarkos_integration/tests/: base_dpc.rs  test.rs
storage/: Cargo.toml
testing/: Cargo.toml
