[package]
name = "snarkvm-snarkos-integration"
version = "0.2.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A test suite for functionalities requiring snarkOS integration"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-curves]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-dpc]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-fields]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-gadgets]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-objects]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-parameters]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-profiler]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-r1cs]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-utilities]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.anyhow]
version = "1.0.38"

[dependencies.base58]
version = "0.1"

[dependencies.bech32]
version = "0.6"

[dependencies.blake2]
version = "0.9"

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.0"

[dependencies.rand]
version = "0.8"

[dependencies.snarkos-storage]
git = "https://github.com/ljedrz/snarkOS"
branch = "decoupled_storage3"
default-features = false
features = ["mem_storage"]

[dependencies.snarkos-testing]
git = "https://github.com/ljedrz/snarkOS"
branch = "decoupled_storage3"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dependencies.rand_xorshift]
version = "0.3"
