[package]
name = "snarkvm-snarkos-integration"
version = "0.0.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A test suite for functionalities requiring snarkOS integration"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-errors]
path = "../errors"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-models]
path = "../models"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-objects]
path = "../objects"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.0.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.0.5"
default-features = false

[dependencies.anyhow]
version = "1.0.38"

[dependencies.blake2]
version = "0.9"

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.2"

[dependencies.itertools]
version = "0.10.0"

[dependencies.rand]
version = "0.8"

[dependencies.snarkos-storage]
version = "1.1.5"
features = ["mem_storage"]

[dependencies.snarkos-testing]
version = "1.1.5"
default-features = false

[dependencies.rand_xorshift]
version = "0.3"
